Queue reused functions

--- a/lists/querueueu/CMakeLists.txt
+++ b/lists/querueueu/CMakeLists.txt
@@ -3,4 +3,4 @@ project(querueueu C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(querueueu main.c)
+add_executable(querueueu main.c "queru.h" "source.c" "../database/db.h" "../database/source.c")
